--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "language-textile",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": false,
   "description": "Textile package for Atom",
   "repository": "https://github.com/al3x/atom-language-textile",
@@ -8,6 +8,5 @@
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
